--- a/DQN_project_MVA.ipynb
+++ b/DQN_project_MVA.ipynb
@@ -849,7 +849,7 @@
         "2)\n",
         "On a donc :   \n",
         "\n",
-        "$Q^{\\pi}(s,a)= r(s,a) + \\gamma\\sum\\limits_{s'\\in S}p(s'|s,a)V^{\\pi}(s')$ \n",
+        "$Q^{\\pi}(s,a)= r(s,a) + \\gamma\\sum\\limits_{s'\\in S}p(s'|s,a)V^{\\pi}(s')$\n",
         "avec $V^{\\pi}(s)=Q(s,\\pi(s))$\n",
         "\n",
         "Et, la policy optimale $\\pi^*$, sous réserve d'existence, satisfait la relation suivante :\n",
@@ -862,7 +862,7 @@
         "\n",
         "On a alors :\n",
         "\n",
-        "$Q^{*}(s,a)= r(s,a) + \\gamma\\sum\\limits_{s'\\in S}p(s'|s,a)\\underset{a'}{max}Q^{*}(s',a')$ \n",
+        "$Q^{*}(s,a)= r(s,a) + \\gamma\\sum\\limits_{s'\\in S}p(s'|s,a)\\underset{a'}{max}Q^{*}(s',a')$\n",
         "\n",
         "On retrouve donc bien :\n",
         "\n",
@@ -1232,7 +1232,7 @@
         "colab_type": "text"
       },
       "source": [
-        "On observe qu'en utilisant un learning rate plus faible, on a de meilleurs performances. Plus espilon est élevé, et plus l'agent pourra explorer son environnement mais donc, plus on aura du mal à converger vers un score élevé car l'agent aura plus tendance à osciller autour de la même position. La taille de la mémoire permet d'obtenir de meilleurs perfomances mais augmente considérablement les temps de calculs. Enfin, je n'ai pas observé d'influence positive en augmentant la taille de batch.\n",
+        "On observe qu'en utilisant un learning rate plus faible, on a de meilleurs performances. Plus espilon est élevé, et plus l'agent pourra explorer son environnement mais donc, plus on aura du mal à converger vers un score élevé car l'agent aura plus tendance à osciller autour de la même position. La taille de la mémoire permet d'obtenir de meilleurs performances mais augmente considérablement les temps de calculs. Enfin, je n'ai pas observé d'influence positive en augmentant la taille de batch.\n",
         "\n",
         "Pour le meilleur compromis entre ces différents paramètres, j'ai obtenu à l'issu de l'apprentissage un score de 11 au bout de 75 époques. J'ai choisi d'utiliser un nombre d'époques assez élevés car des réseaux entièrement connectés sont assez rapides à entraîner et je souhaitais obtenir les meilleurs performances possibles.\n",
         "\n",
