--- a/DQN_project_MVA.ipynb
+++ b/DQN_project_MVA.ipynb
@@ -1531,7 +1531,7 @@
         "colab_type": "text"
       },
       "source": [
-        "On observe ici une mauvaise généralisation du modèle FC. En effet, on a un score de seulement 1.25 en moyenne. Cependant, que les performances du CNN sont même meilleures avec un score de 12.45, ce qui confirme notre première intuition de meilleur performance du réseau CNN.\n",
+        "On observe ici une mauvaise généralisation du modèle FC. En effet, on a un score de seulement 1.25 en moyenne. Cependant, les performances du CNN sont même meilleures avec un score de 12.45, ce qui confirme notre première intuition de meilleur performance du réseau CNN.\n",
         "\n",
         "Pour différents niveaux de températures, on remarque une baisse de score pour les deux réseaux quand on diminue la température à 0.2. En effet, il y a moins de reward et donc il est plus difficile de les accumuler. En revanche, lorsque l'on augmente la température, le score avec le CNN augmente (on trouve en moyenne un score de 1 contre 0.7 avec une température de 0.3), alors que l'on obtient que des faibles scores pour le réseau FC. J'ai donc choisi de conserver cette température.\n",
         "\n",
