--- a/DQN_project_MVA.ipynb
+++ b/DQN_project_MVA.ipynb
@@ -1865,7 +1865,7 @@
         "colab_type": "text"
       },
       "source": [
-        "On observe que l'on obtient un meilleur score, avec très peu de malus en test et d'époques en apprentissage (18), ce qui valide la petinence de la démarche proposée."
+        "On observe que l'on obtient un meilleur score, avec très peu de malus en test et d'époques en apprentissage (18), ce qui valide la pertinence de la démarche proposée."
       ]
     },
     {
